--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "clsx": "^2.1.0",
+    "immer": "^10.0.4",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
